Add backgrondGif, musicplayer, and music

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Genesis</title>
 </head>
-<body>
-    <div class="main-game">
+<body class="main-game">
+    <div>
+        <audio src="assets/CYBER_DREAM.mp3" controls preload autoplay loop >
+        </audio>
+    </div>
+    <div>
         <div class="genius">
             <div class="blue"></div>
             <div class="yellow"></div>
